fix html reloading, extract css to file

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "kontra": "^6.2.3"
   },
   "devDependencies": {
+    "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.39.2",
     "webpack-cli": "^3.3.6",
     "webpack-dev-server": "^3.8.0"
