--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "kontra": "^6.2.3"
   },
   "devDependencies": {
+    "css-loader": "^3.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "style-loader": "^1.0.0",
+    "svg-url-loader": "^3.0.2",
     "webpack": "^4.39.2",
     "webpack-cli": "^3.3.6",
     "webpack-dev-server": "^3.8.0"
